--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,5 @@
 /.react-router/
 /build/
 
-
-# Environment variables
-.env
+.env.*
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
